[gd_scene load_steps=140 format=3 uid="uid://bxnvsktxw8nid"]

[ext_resource type="Script" path="res://Scripts/UI-Components/Map/level_flag.gd" id="1_v7l80"]
[ext_resource type="Texture2D" uid="uid://bd7hwn1r75c7n" path="res://Assets/Animations/Flags/diamond.png" id="2_7urd0"]
[ext_resource type="Texture2D" uid="uid://bqwxjwukw100m" path="res://Assets/Animations/Flags/battle-flow_00.png" id="2_rggjc"]
[ext_resource type="Texture2D" uid="uid://bujjsspntd753" path="res://Assets/Animations/Flags/battle-flow_01.png" id="3_wswa2"]
[ext_resource type="Texture2D" uid="uid://dstati65idhmg" path="res://Assets/Animations/Flags/battle-flow_02.png" id="4_7cj2d"]
[ext_resource type="Texture2D" uid="uid://ddaoioie8vicf" path="res://Assets/Animations/Flags/battle-flow_03.png" id="5_hd8xl"]
[ext_resource type="Texture2D" uid="uid://1d8nwyoaftf4" path="res://Assets/Animations/Flags/battle-flow_04.png" id="6_6vbi6"]
[ext_resource type="Texture2D" uid="uid://cm20406h647tv" path="res://Assets/Animations/Flags/battle-flow_05.png" id="7_cwm6w"]
[ext_resource type="Texture2D" uid="uid://dkg3jufq26bvn" path="res://Assets/Animations/Flags/battle-flow_06.png" id="8_dtlkf"]
[ext_resource type="Texture2D" uid="uid://beg7grrb4k6bq" path="res://Assets/Animations/Flags/battle-flow_07.png" id="9_ytm10"]
[ext_resource type="Texture2D" uid="uid://3vmmnjvxskcm" path="res://Assets/Animations/Flags/battle-flow_08.png" id="10_sm17c"]
[ext_resource type="Texture2D" uid="uid://c7qtkre021b7v" path="res://Assets/Animations/Flags/battle-flow_09.png" id="11_5s20m"]
[ext_resource type="Texture2D" uid="uid://cd0aq2hliuyl4" path="res://Assets/Animations/Flags/battle-flow_10.png" id="12_t4a2e"]
[ext_resource type="Texture2D" uid="uid://ct84aj131k3t4" path="res://Assets/Animations/Flags/battle-flow_11.png" id="13_7c3oj"]
[ext_resource type="Texture2D" uid="uid://c3hmaq0qfxwyx" path="res://Assets/Animations/Flags/battle-flow_12.png" id="14_bsjuk"]
[ext_resource type="Texture2D" uid="uid://c04wtderbylyk" path="res://Assets/Animations/Flags/battle-flow_13.png" id="15_16oiv"]
[ext_resource type="Texture2D" uid="uid://b16hyso8a2v3f" path="res://Assets/Animations/Flags/battle-flow_14.png" id="16_5luv0"]
[ext_resource type="Texture2D" uid="uid://mwgi5qp3tc6k" path="res://Assets/Animations/Flags/battle-flow_15.png" id="17_04og8"]
[ext_resource type="Texture2D" uid="uid://veusp383yu5h" path="res://Assets/Animations/Flags/battle-flow_16.png" id="18_er7s2"]
[ext_resource type="Texture2D" uid="uid://cegqtldi06vyb" path="res://Assets/Animations/Flags/battle-flow_17.png" id="19_yoy7v"]
[ext_resource type="Texture2D" uid="uid://dhsuikssi566l" path="res://Assets/Animations/Flags/battle-flow_18.png" id="20_xhhad"]
[ext_resource type="Texture2D" uid="uid://dyo0qy68wnaf8" path="res://Assets/Animations/Flags/battle-flow_19.png" id="21_3nlvd"]
[ext_resource type="Texture2D" uid="uid://rombbekw3qgi" path="res://Assets/Animations/Flags/battle-flow_20.png" id="22_rydmh"]
[ext_resource type="Texture2D" uid="uid://giaaddbaah2s" path="res://Assets/Animations/Flags/battle-flow_21.png" id="23_185hs"]
[ext_resource type="Texture2D" uid="uid://bfwwv68vr8y4k" path="res://Assets/Animations/Flags/battle-flow_22.png" id="24_21hpo"]
[ext_resource type="Texture2D" uid="uid://coftjh4pddryp" path="res://Assets/Animations/Flags/battle-flow_23.png" id="25_b3g0a"]
[ext_resource type="Texture2D" uid="uid://8sg4rpgy5xf6" path="res://Assets/Animations/Flags/battle-flow_24.png" id="26_s4gmh"]
[ext_resource type="Texture2D" uid="uid://q3wyrs0eonb2" path="res://Assets/Animations/Flags/battle-flow_25.png" id="27_jx40d"]
[ext_resource type="Texture2D" uid="uid://07yrivbruwrv" path="res://Assets/Animations/Flags/battle-flow_26.png" id="28_t6prl"]
[ext_resource type="Texture2D" uid="uid://ccn7qoin8icog" path="res://Assets/Animations/Flags/battle-flow_27.png" id="29_js23g"]
[ext_resource type="Texture2D" uid="uid://n0s3y8hh32y2" path="res://Assets/Animations/Flags/battle-flow_28.png" id="30_jax1l"]
[ext_resource type="Texture2D" uid="uid://byealkm1uhi3h" path="res://Assets/Animations/Flags/battle-flow_29.png" id="31_7dho5"]
[ext_resource type="Texture2D" uid="uid://cwsegnpiyye1y" path="res://Assets/Animations/Flags/battle-flow_30.png" id="32_iwtke"]
[ext_resource type="Texture2D" uid="uid://dbbpu2rwo73ih" path="res://Assets/Animations/Flags/battle-flow_31.png" id="33_7o5ju"]
[ext_resource type="Texture2D" uid="uid://cerhlsej2st1r" path="res://Assets/Animations/Flags/battle-flow_32.png" id="34_c8nl5"]
[ext_resource type="Texture2D" uid="uid://cygsevmn7fsg2" path="res://Assets/Animations/Flags/battle-flow_33.png" id="35_k32w4"]
[ext_resource type="Texture2D" uid="uid://bcudi2tvyu6k0" path="res://Assets/Animations/Flags/battle-flow_34.png" id="36_beeiu"]
[ext_resource type="Texture2D" uid="uid://do02cu5oxuj4w" path="res://Assets/Animations/Flags/battle-flow_35.png" id="37_b6mf6"]
[ext_resource type="Texture2D" uid="uid://f60pryvp6se0" path="res://Assets/Animations/Flags/battle-flow_36.png" id="38_8eef6"]
[ext_resource type="Texture2D" uid="uid://tws1jbk4ogop" path="res://Assets/Animations/Flags/battle-flow_37.png" id="39_ra6ek"]
[ext_resource type="Texture2D" uid="uid://sts5lhbysxlf" path="res://Assets/Animations/Flags/battle-flow_38.png" id="40_lbauv"]
[ext_resource type="Texture2D" uid="uid://pqd85y754gu0" path="res://Assets/Animations/Flags/battle-flow_39.png" id="41_wwrbj"]
[ext_resource type="Texture2D" uid="uid://b66at8u8moydc" path="res://Assets/Animations/Flags/battle-select.png" id="42_a2vsl"]
[ext_resource type="Texture2D" uid="uid://c57krsy511uin" path="res://Assets/Animations/Flags/defence-flow_00.png" id="42_bmyec"]
[ext_resource type="Texture2D" uid="uid://chojwyf0lpyv7" path="res://Assets/Animations/Flags/defence-flow_01.png" id="43_vrb5d"]
[ext_resource type="Texture2D" uid="uid://ojxey53bui0b" path="res://Assets/Animations/Flags/batte-show_0.png" id="43_w0ir8"]
[ext_resource type="Texture2D" uid="uid://dhi5frst327ns" path="res://Assets/Animations/Flags/batte-show_1.png" id="44_u40ck"]
[ext_resource type="Texture2D" uid="uid://b2u565ow04c1m" path="res://Assets/Animations/Flags/defence-flow_02.png" id="44_vcjri"]
[ext_resource type="Texture2D" uid="uid://dhlfhkgcl1vlp" path="res://Assets/Animations/Flags/batte-show_2.png" id="45_2fc83"]
[ext_resource type="Texture2D" uid="uid://ba810n7vyvi3b" path="res://Assets/Animations/Flags/defence-flow_03.png" id="45_r4w4x"]
[ext_resource type="Texture2D" uid="uid://d2hx25ecg7k5a" path="res://Assets/Animations/Flags/batte-show_3.png" id="46_b6l6t"]
[ext_resource type="Texture2D" uid="uid://cadr0l5b1kkjm" path="res://Assets/Animations/Flags/defence-flow_04.png" id="46_wkju7"]
[ext_resource type="Texture2D" uid="uid://dpo75mlif22sl" path="res://Assets/Animations/Flags/batte-show_4.png" id="47_7ndxr"]
[ext_resource type="Texture2D" uid="uid://blu2t8bq8q0al" path="res://Assets/Animations/Flags/defence-flow_05.png" id="47_7rvfc"]
[ext_resource type="Texture2D" uid="uid://bw6ys6xo1yqu6" path="res://Assets/Animations/Flags/batte-show_5.png" id="48_prc0e"]
[ext_resource type="Texture2D" uid="uid://js8k1a6okdi2" path="res://Assets/Animations/Flags/defence-flow_06.png" id="48_rdaff"]
[ext_resource type="Texture2D" uid="uid://ct0h2bay3rvd" path="res://Assets/Animations/Flags/defence-flow_07.png" id="49_6mcu5"]
[ext_resource type="Texture2D" uid="uid://dycisqii4m5by" path="res://Assets/Animations/Flags/batte-show_6.png" id="49_n6012"]
[ext_resource type="Texture2D" uid="uid://cwwx17e550fmg" path="res://Assets/Animations/Flags/batte-show_7.png" id="50_b130j"]
[ext_resource type="Texture2D" uid="uid://dfxitql41cbed" path="res://Assets/Animations/Flags/defence-flow_08.png" id="50_mkmd2"]
[ext_resource type="Texture2D" uid="uid://mrytk41lhhbe" path="res://Assets/Animations/Flags/bedrock-flow_00.png" id="51_7dnq0"]
[ext_resource type="Texture2D" uid="uid://cpgl2cmiffwwg" path="res://Assets/Animations/Flags/defence-flow_09.png" id="51_xcyj1"]
[ext_resource type="Texture2D" uid="uid://bgkx6358cp7j8" path="res://Assets/Animations/Flags/defence-flow_10.png" id="52_ctpwd"]
[ext_resource type="Texture2D" uid="uid://bed3r4ltetiq5" path="res://Assets/Animations/Flags/bedrock-flow_01.png" id="52_iwat7"]
[ext_resource type="Texture2D" uid="uid://dihl1nfgh10ii" path="res://Assets/Animations/Flags/defence-flow_11.png" id="53_5ogf6"]
[ext_resource type="Texture2D" uid="uid://f6fa546jkf17" path="res://Assets/Animations/Flags/bedrock-flow_02.png" id="53_vf7ua"]
[ext_resource type="Texture2D" uid="uid://drdoeefsc1yra" path="res://Assets/Animations/Flags/bedrock-flow_03.png" id="54_32inb"]
[ext_resource type="Texture2D" uid="uid://d21ohof40lqen" path="res://Assets/Animations/Flags/defence-flow_12.png" id="54_dvy75"]
[ext_resource type="Texture2D" uid="uid://caa3nswfjeb5a" path="res://Assets/Animations/Flags/defence-flow_13.png" id="55_8y8x0"]
[ext_resource type="Texture2D" uid="uid://prf1rck6hnjx" path="res://Assets/Animations/Flags/bedrock-flow_04.png" id="55_46361"]
[ext_resource type="Texture2D" uid="uid://cw1e3jh2or0tb" path="res://Assets/Animations/Flags/bedrock-flow_05.png" id="56_0v6e4"]
[ext_resource type="Texture2D" uid="uid://bavpvmphplm0r" path="res://Assets/Animations/Flags/defence-flow_14.png" id="56_wejr2"]
[ext_resource type="Texture2D" uid="uid://tfnpa13be4k5" path="res://Assets/Animations/Flags/bedrock-flow_06.png" id="57_1qx5j"]
[ext_resource type="Texture2D" uid="uid://b6lbg8xqd1rq2" path="res://Assets/Animations/Flags/defence-flow_15.png" id="57_u18xw"]
[ext_resource type="Texture2D" uid="uid://lrrg1mq07ar0" path="res://Assets/Animations/Flags/bedrock-flow_07.png" id="58_2lhen"]
[ext_resource type="Texture2D" uid="uid://d2i4f5dfjccwy" path="res://Assets/Animations/Flags/defence-flow_16.png" id="58_q3hit"]
[ext_resource type="Texture2D" uid="uid://bty675v3uxej7" path="res://Assets/Animations/Flags/bedrock-flow_08.png" id="59_mrjl3"]
[ext_resource type="Texture2D" uid="uid://0yafdiduy78y" path="res://Assets/Animations/Flags/defence-flow_17.png" id="59_umfn1"]
[ext_resource type="Texture2D" uid="uid://3ann8r52itlx" path="res://Assets/Animations/Flags/defence-flow_18.png" id="60_1h8t6"]
[ext_resource type="Texture2D" uid="uid://cswo8i5vm767r" path="res://Assets/Animations/Flags/bedrock-flow_09.png" id="60_lolkh"]
[ext_resource type="Texture2D" uid="uid://cb1crxga71x5d" path="res://Assets/Animations/Flags/defence-flow_19.png" id="61_5tk5g"]
[ext_resource type="Texture2D" uid="uid://h4pl0gexq1ru" path="res://Assets/Animations/Flags/bedrock-flow_10.png" id="61_pjg54"]
[ext_resource type="Texture2D" uid="uid://byh8rfa8jc4v3" path="res://Assets/Animations/Flags/defence-flow_20.png" id="62_j2hd3"]
[ext_resource type="Texture2D" uid="uid://djeotlwtm2rkh" path="res://Assets/Animations/Flags/bedrock-flow_11.png" id="62_s8bau"]
[ext_resource type="Texture2D" uid="uid://0byby7hvwoej" path="res://Assets/Animations/Flags/defence-flow_21.png" id="63_3yqbr"]
[ext_resource type="Texture2D" uid="uid://brimccetvlej7" path="res://Assets/Animations/Flags/bedrock-flow_12.png" id="63_viqcj"]
[ext_resource type="Texture2D" uid="uid://b2g071lrotwsf" path="res://Assets/Animations/Flags/defence-flow_22.png" id="64_qexso"]
[ext_resource type="Texture2D" uid="uid://cfaov2kgs3rwt" path="res://Assets/Animations/Flags/bedrock-flow_13.png" id="64_v8vdw"]
[ext_resource type="Texture2D" uid="uid://53jp2ukcyj4r" path="res://Assets/Animations/Flags/bedrock-flow_14.png" id="65_wvi6v"]
[ext_resource type="Texture2D" uid="uid://dpq104mbpp4wm" path="res://Assets/Animations/Flags/defence-flow_23.png" id="65_x3vpt"]
[ext_resource type="Texture2D" uid="uid://ciaogwokhswun" path="res://Assets/Animations/Flags/bedrock-flow_15.png" id="66_pgon7"]
[ext_resource type="Texture2D" uid="uid://c11sosfnc82sj" path="res://Assets/Animations/Flags/defence-flow_24.png" id="66_yyruy"]
[ext_resource type="Texture2D" uid="uid://kpjjvx7ejk4k" path="res://Assets/Animations/Flags/defence-flow_25.png" id="67_4d0qk"]
[ext_resource type="Texture2D" uid="uid://c04ly4eptepd6" path="res://Assets/Animations/Flags/bedrock-flow_16.png" id="67_rs1k1"]
[ext_resource type="Texture2D" uid="uid://d0cxn5eqdhj4e" path="res://Assets/Animations/Flags/bedrock-flow_17.png" id="68_mqq2p"]
[ext_resource type="Texture2D" uid="uid://y8hplfjkl1vj" path="res://Assets/Animations/Flags/defence-flow_26.png" id="68_vkcvs"]
[ext_resource type="Texture2D" uid="uid://blbo4djjw82bw" path="res://Assets/Animations/Flags/defence-flow_27.png" id="69_mw2pl"]
[ext_resource type="Texture2D" uid="uid://dery2xu0jwwr5" path="res://Assets/Animations/Flags/bedrock-flow_18.png" id="69_ocouj"]
[ext_resource type="Texture2D" uid="uid://cxamqma73nnip" path="res://Assets/Animations/Flags/defence-flow_28.png" id="70_hpw6w"]
[ext_resource type="Texture2D" uid="uid://7ifu48tno5fd" path="res://Assets/Animations/Flags/bedrock-flow_19.png" id="70_x6ggt"]
[ext_resource type="Texture2D" uid="uid://xguggc0wj4j6" path="res://Assets/Animations/Flags/defence-flow_29.png" id="71_nnt0c"]
[ext_resource type="Texture2D" uid="uid://c6rxmafm8yry" path="res://Assets/Animations/Flags/bedrock-flow_20.png" id="71_qr1w5"]
[ext_resource type="Texture2D" uid="uid://bmr80qchcccct" path="res://Assets/Animations/Flags/defence-flow_30.png" id="72_0r0f1"]
[ext_resource type="Texture2D" uid="uid://cjiwscunxi4rg" path="res://Assets/Animations/Flags/bedrock-flow_21.png" id="72_n3jjc"]
[ext_resource type="Texture2D" uid="uid://cxag57gqytotc" path="res://Assets/Animations/Flags/defence-flow_31.png" id="73_6gc11"]
[ext_resource type="Texture2D" uid="uid://cgv5743xx7hos" path="res://Assets/Animations/Flags/bedrock-flow_22.png" id="73_lwd88"]
[ext_resource type="Texture2D" uid="uid://cbc5gw4tu0au5" path="res://Assets/Animations/Flags/defence-flow_32.png" id="74_ana6k"]
[ext_resource type="Texture2D" uid="uid://c44uqloiqtvq3" path="res://Assets/Animations/Flags/bedrock-flow_23.png" id="74_lkbw8"]
[ext_resource type="Texture2D" uid="uid://crekqqm6x0qb7" path="res://Assets/Animations/Flags/bedrock-flow_24.png" id="75_mbxq6"]
[ext_resource type="Texture2D" uid="uid://8fhssbr2chaq" path="res://Assets/Animations/Flags/defence-flow_33.png" id="75_rjg72"]
[ext_resource type="Texture2D" uid="uid://bp2ak2p873xar" path="res://Assets/Animations/Flags/bedrock-flow_25.png" id="76_3riox"]
[ext_resource type="Texture2D" uid="uid://bh68mcdg3v3xq" path="res://Assets/Animations/Flags/defence-flow_34.png" id="76_rfix6"]
[ext_resource type="Texture2D" uid="uid://37hv5mje41fr" path="res://Assets/Animations/Flags/defence-flow_35.png" id="77_10kxs"]
[ext_resource type="Texture2D" uid="uid://pwey6lwox1f0" path="res://Assets/Animations/Flags/bedrock-flow_26.png" id="77_52ook"]
[ext_resource type="Texture2D" uid="uid://ktoik41galfr" path="res://Assets/Animations/Flags/bedrock-flow_27.png" id="78_klk5h"]
[ext_resource type="Texture2D" uid="uid://bbmlhgkebg6rf" path="res://Assets/Animations/Flags/defence-flow_36.png" id="78_w7aae"]
[ext_resource type="Texture2D" uid="uid://bn3bq5hw46djk" path="res://Assets/Animations/Flags/bedrock-flow_28.png" id="79_q2fif"]
[ext_resource type="Texture2D" uid="uid://oaeqjc7n2qfh" path="res://Assets/Animations/Flags/defence-flow_37.png" id="79_uwbin"]
[ext_resource type="Texture2D" uid="uid://bldvlyjj3u56m" path="res://Assets/Animations/Flags/defence-flow_38.png" id="80_1subw"]
[ext_resource type="Texture2D" uid="uid://ncq6rtuig1ld" path="res://Assets/Animations/Flags/bedrock-flow_29.png" id="80_nbicd"]
[ext_resource type="Texture2D" uid="uid://dwbg1t87lbmtk" path="res://Assets/Animations/Flags/defence-flow_39.png" id="81_jfdte"]
[ext_resource type="Texture2D" uid="uid://c5uo62s0klm01" path="res://Assets/Animations/Flags/bedrock-flow_30.png" id="81_scqon"]
[ext_resource type="Texture2D" uid="uid://d3eef62lswlcm" path="res://Assets/Animations/Flags/bedrock-flow_31.png" id="82_expgb"]
[ext_resource type="Texture2D" uid="uid://b16dgv1f63eic" path="res://Assets/Animations/Flags/bedrock-flow_32.png" id="83_uiq0x"]
[ext_resource type="Texture2D" uid="uid://coecpuwg8ta1u" path="res://Assets/Animations/Flags/bedrock-flow_33.png" id="84_cnone"]
[ext_resource type="Texture2D" uid="uid://bqkvt7nbbdks4" path="res://Assets/Animations/Flags/bedrock-flow_34.png" id="85_kdkbl"]
[ext_resource type="Texture2D" uid="uid://sen82kukc4pm" path="res://Assets/Animations/Flags/bedrock-flow_35.png" id="86_e2rys"]
[ext_resource type="Texture2D" uid="uid://c7wqvaunu3si7" path="res://Assets/Animations/Flags/bedrock-flow_36.png" id="87_f5bd6"]
[ext_resource type="Texture2D" uid="uid://bb4ydlq4rv7ns" path="res://Assets/Animations/Flags/bedrock-flow_37.png" id="88_fo8se"]
[ext_resource type="Texture2D" uid="uid://cnyfixgyqu3jg" path="res://Assets/Animations/Flags/bedrock-flow_38.png" id="89_xwst2"]
[ext_resource type="Texture2D" uid="uid://bn0m83450xohi" path="res://Assets/Animations/Flags/bedrock-flow_39.png" id="90_g6fop"]
[ext_resource type="Texture2D" uid="uid://b3v33pxdc2lbd" path="res://Assets/Animations/Flags/bedrock-select.png" id="91_1fpbx"]
[ext_resource type="Texture2D" uid="uid://dt1uu2upb6aa0" path="res://Assets/Animations/Flags/defence-select.png" id="132_h8tu6"]
[ext_resource type="Texture2D" uid="uid://bgch88dfevpg1" path="res://Assets/Images/UI/start-null.png" id="134_ubrxx"]
[ext_resource type="Texture2D" uid="uid://d1sjkrxoq5ldk" path="res://Assets/Images/UI/star.png" id="135_h4tqb"]
[ext_resource type="AudioStream" uid="uid://cldl1o03dvea1" path="res://Assets/Sounds/FXs/mc levelup.mp3" id="136_gb8wn"]
[ext_resource type="AudioStream" uid="uid://duvqp5eu8d8c3" path="res://Assets/Sounds/FXs/UIs/mcexp.wav" id="137_3oevs"]
[ext_resource type="AudioStream" uid="uid://bfctns6b8qmoy" path="res://Assets/Sounds/FXs/Flag.wav" id="138_jrc8e"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nkkkw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rggjc")
}, {
"duration": 1.0,
"texture": ExtResource("3_wswa2")
}, {
"duration": 1.0,
"texture": ExtResource("4_7cj2d")
}, {
"duration": 1.0,
"texture": ExtResource("5_hd8xl")
}, {
"duration": 1.0,
"texture": ExtResource("6_6vbi6")
}, {
"duration": 1.0,
"texture": ExtResource("7_cwm6w")
}, {
"duration": 1.0,
"texture": ExtResource("8_dtlkf")
}, {
"duration": 1.0,
"texture": ExtResource("9_ytm10")
}, {
"duration": 1.0,
"texture": ExtResource("10_sm17c")
}, {
"duration": 1.0,
"texture": ExtResource("11_5s20m")
}, {
"duration": 1.0,
"texture": ExtResource("12_t4a2e")
}, {
"duration": 1.0,
"texture": ExtResource("13_7c3oj")
}, {
"duration": 1.0,
"texture": ExtResource("14_bsjuk")
}, {
"duration": 1.0,
"texture": ExtResource("15_16oiv")
}, {
"duration": 1.0,
"texture": ExtResource("16_5luv0")
}, {
"duration": 1.0,
"texture": ExtResource("17_04og8")
}, {
"duration": 1.0,
"texture": ExtResource("18_er7s2")
}, {
"duration": 1.0,
"texture": ExtResource("19_yoy7v")
}, {
"duration": 1.0,
"texture": ExtResource("20_xhhad")
}, {
"duration": 1.0,
"texture": ExtResource("21_3nlvd")
}, {
"duration": 1.0,
"texture": ExtResource("22_rydmh")
}, {
"duration": 1.0,
"texture": ExtResource("23_185hs")
}, {
"duration": 1.0,
"texture": ExtResource("24_21hpo")
}, {
"duration": 1.0,
"texture": ExtResource("25_b3g0a")
}, {
"duration": 1.0,
"texture": ExtResource("26_s4gmh")
}, {
"duration": 1.0,
"texture": ExtResource("27_jx40d")
}, {
"duration": 1.0,
"texture": ExtResource("28_t6prl")
}, {
"duration": 1.0,
"texture": ExtResource("29_js23g")
}, {
"duration": 1.0,
"texture": ExtResource("30_jax1l")
}, {
"duration": 1.0,
"texture": ExtResource("31_7dho5")
}, {
"duration": 1.0,
"texture": ExtResource("32_iwtke")
}, {
"duration": 1.0,
"texture": ExtResource("33_7o5ju")
}, {
"duration": 1.0,
"texture": ExtResource("34_c8nl5")
}, {
"duration": 1.0,
"texture": ExtResource("35_k32w4")
}, {
"duration": 1.0,
"texture": ExtResource("36_beeiu")
}, {
"duration": 1.0,
"texture": ExtResource("37_b6mf6")
}, {
"duration": 1.0,
"texture": ExtResource("38_8eef6")
}, {
"duration": 1.0,
"texture": ExtResource("39_ra6ek")
}, {
"duration": 1.0,
"texture": ExtResource("40_lbauv")
}, {
"duration": 1.0,
"texture": ExtResource("41_wwrbj")
}],
"loop": true,
"name": &"battle_flow",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_a2vsl")
}],
"loop": true,
"name": &"battle_select",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_w0ir8")
}, {
"duration": 1.0,
"texture": ExtResource("44_u40ck")
}, {
"duration": 1.0,
"texture": ExtResource("45_2fc83")
}, {
"duration": 1.0,
"texture": ExtResource("46_b6l6t")
}, {
"duration": 1.0,
"texture": ExtResource("47_7ndxr")
}, {
"duration": 1.0,
"texture": ExtResource("48_prc0e")
}, {
"duration": 1.0,
"texture": ExtResource("49_n6012")
}, {
"duration": 1.0,
"texture": ExtResource("50_b130j")
}],
"loop": false,
"name": &"battle_show",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("51_7dnq0")
}, {
"duration": 1.0,
"texture": ExtResource("52_iwat7")
}, {
"duration": 1.0,
"texture": ExtResource("53_vf7ua")
}, {
"duration": 1.0,
"texture": ExtResource("54_32inb")
}, {
"duration": 1.0,
"texture": ExtResource("55_46361")
}, {
"duration": 1.0,
"texture": ExtResource("56_0v6e4")
}, {
"duration": 1.0,
"texture": ExtResource("57_1qx5j")
}, {
"duration": 1.0,
"texture": ExtResource("58_2lhen")
}, {
"duration": 1.0,
"texture": ExtResource("59_mrjl3")
}, {
"duration": 1.0,
"texture": ExtResource("60_lolkh")
}, {
"duration": 1.0,
"texture": ExtResource("61_pjg54")
}, {
"duration": 1.0,
"texture": ExtResource("62_s8bau")
}, {
"duration": 1.0,
"texture": ExtResource("63_viqcj")
}, {
"duration": 1.0,
"texture": ExtResource("64_v8vdw")
}, {
"duration": 1.0,
"texture": ExtResource("65_wvi6v")
}, {
"duration": 1.0,
"texture": ExtResource("66_pgon7")
}, {
"duration": 1.0,
"texture": ExtResource("67_rs1k1")
}, {
"duration": 1.0,
"texture": ExtResource("68_mqq2p")
}, {
"duration": 1.0,
"texture": ExtResource("69_ocouj")
}, {
"duration": 1.0,
"texture": ExtResource("70_x6ggt")
}, {
"duration": 1.0,
"texture": ExtResource("71_qr1w5")
}, {
"duration": 1.0,
"texture": ExtResource("72_n3jjc")
}, {
"duration": 1.0,
"texture": ExtResource("73_lwd88")
}, {
"duration": 1.0,
"texture": ExtResource("74_lkbw8")
}, {
"duration": 1.0,
"texture": ExtResource("75_mbxq6")
}, {
"duration": 1.0,
"texture": ExtResource("76_3riox")
}, {
"duration": 1.0,
"texture": ExtResource("77_52ook")
}, {
"duration": 1.0,
"texture": ExtResource("78_klk5h")
}, {
"duration": 1.0,
"texture": ExtResource("79_q2fif")
}, {
"duration": 1.0,
"texture": ExtResource("80_nbicd")
}, {
"duration": 1.0,
"texture": ExtResource("81_scqon")
}, {
"duration": 1.0,
"texture": ExtResource("82_expgb")
}, {
"duration": 1.0,
"texture": ExtResource("83_uiq0x")
}, {
"duration": 1.0,
"texture": ExtResource("84_cnone")
}, {
"duration": 1.0,
"texture": ExtResource("85_kdkbl")
}, {
"duration": 1.0,
"texture": ExtResource("86_e2rys")
}, {
"duration": 1.0,
"texture": ExtResource("87_f5bd6")
}, {
"duration": 1.0,
"texture": ExtResource("88_fo8se")
}, {
"duration": 1.0,
"texture": ExtResource("89_xwst2")
}, {
"duration": 1.0,
"texture": ExtResource("90_g6fop")
}],
"loop": true,
"name": &"bedrock_flow",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("91_1fpbx")
}],
"loop": true,
"name": &"bedrock_select",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_bmyec")
}, {
"duration": 1.0,
"texture": ExtResource("43_vrb5d")
}, {
"duration": 1.0,
"texture": ExtResource("44_vcjri")
}, {
"duration": 1.0,
"texture": ExtResource("45_r4w4x")
}, {
"duration": 1.0,
"texture": ExtResource("46_wkju7")
}, {
"duration": 1.0,
"texture": ExtResource("47_7rvfc")
}, {
"duration": 1.0,
"texture": ExtResource("48_rdaff")
}, {
"duration": 1.0,
"texture": ExtResource("49_6mcu5")
}, {
"duration": 1.0,
"texture": ExtResource("50_mkmd2")
}, {
"duration": 1.0,
"texture": ExtResource("51_xcyj1")
}, {
"duration": 1.0,
"texture": ExtResource("52_ctpwd")
}, {
"duration": 1.0,
"texture": ExtResource("53_5ogf6")
}, {
"duration": 1.0,
"texture": ExtResource("54_dvy75")
}, {
"duration": 1.0,
"texture": ExtResource("55_8y8x0")
}, {
"duration": 1.0,
"texture": ExtResource("56_wejr2")
}, {
"duration": 1.0,
"texture": ExtResource("57_u18xw")
}, {
"duration": 1.0,
"texture": ExtResource("58_q3hit")
}, {
"duration": 1.0,
"texture": ExtResource("59_umfn1")
}, {
"duration": 1.0,
"texture": ExtResource("60_1h8t6")
}, {
"duration": 1.0,
"texture": ExtResource("61_5tk5g")
}, {
"duration": 1.0,
"texture": ExtResource("62_j2hd3")
}, {
"duration": 1.0,
"texture": ExtResource("63_3yqbr")
}, {
"duration": 1.0,
"texture": ExtResource("64_qexso")
}, {
"duration": 1.0,
"texture": ExtResource("65_x3vpt")
}, {
"duration": 1.0,
"texture": ExtResource("66_yyruy")
}, {
"duration": 1.0,
"texture": ExtResource("67_4d0qk")
}, {
"duration": 1.0,
"texture": ExtResource("68_vkcvs")
}, {
"duration": 1.0,
"texture": ExtResource("69_mw2pl")
}, {
"duration": 1.0,
"texture": ExtResource("70_hpw6w")
}, {
"duration": 1.0,
"texture": ExtResource("71_nnt0c")
}, {
"duration": 1.0,
"texture": ExtResource("72_0r0f1")
}, {
"duration": 1.0,
"texture": ExtResource("73_6gc11")
}, {
"duration": 1.0,
"texture": ExtResource("74_ana6k")
}, {
"duration": 1.0,
"texture": ExtResource("75_rjg72")
}, {
"duration": 1.0,
"texture": ExtResource("76_rfix6")
}, {
"duration": 1.0,
"texture": ExtResource("77_10kxs")
}, {
"duration": 1.0,
"texture": ExtResource("78_w7aae")
}, {
"duration": 1.0,
"texture": ExtResource("79_uwbin")
}, {
"duration": 1.0,
"texture": ExtResource("80_1subw")
}, {
"duration": 1.0,
"texture": ExtResource("81_jfdte")
}],
"loop": true,
"name": &"defence_flow",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("132_h8tu6")
}],
"loop": true,
"name": &"defence_select",
"speed": 5.0
}]

[node name="LevelFlag" type="Node2D"]
script = ExtResource("1_v7l80")

[node name="DiamondSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(3, -280)
scale = Vector2(0.897728, 0.897728)
texture = ExtResource("2_7urd0")
region_enabled = true
region_rect = Rect2(0, 0, 396, 364)

[node name="FlagSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(10, -217)
sprite_frames = SubResource("SpriteFrames_nkkkw")
animation = &"battle_flow"
autoplay = "battle_flow"

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -122.0
offset_top = -457.0
offset_right = 130.0
offset_bottom = 8.0
focus_mode = 0

[node name="StarUnder1" type="Sprite2D" parent="."]
position = Vector2(-75, -462)
scale = Vector2(0.519562, 0.519562)
texture = ExtResource("134_ubrxx")

[node name="StarUnder2" type="Sprite2D" parent="."]
position = Vector2(0.999992, -462)
scale = Vector2(0.519562, 0.519562)
texture = ExtResource("134_ubrxx")

[node name="StarUnder3" type="Sprite2D" parent="."]
position = Vector2(75, -462)
scale = Vector2(0.519562, 0.519562)
texture = ExtResource("134_ubrxx")

[node name="Star1" type="Sprite2D" parent="."]
visible = false
position = Vector2(-75, -462)
scale = Vector2(0.519562, 0.519562)
texture = ExtResource("135_h4tqb")

[node name="Star2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.999992, -462)
scale = Vector2(0.519562, 0.519562)
texture = ExtResource("135_h4tqb")

[node name="Star3" type="Sprite2D" parent="."]
visible = false
position = Vector2(75, -462)
scale = Vector2(0.519562, 0.519562)
texture = ExtResource("135_h4tqb")

[node name="LevelupAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("136_gb8wn")
bus = &"Sound"

[node name="StarAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("137_3oevs")
bus = &"Sound"

[node name="FlagAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("138_jrc8e")
bus = &"Sound"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
